--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>DEL</button>
-        <button>AC</button>
+        <button class="danger">DEL</button>
+        <button class="danger">AC</button>
 
         <button>4</button>
         <button>5</button>
         <button>6</button>
-        <button>&times;</button>
-        <button>&#247;</button>
+        <button class="operators">&times;</button>
+        <button class="operators">&#247;</button>
 
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>+</button>
-        <button>-</button>
+        <button class="operators">+</button>
+        <button class="operators">-</button>
 
         <button>0</button>
         <button>&middot;</button>
